cmake_minimum_required(VERSION 3.24)
project(Leetcode_2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_2023 main/main.cpp test.cpp main/数据结构教程/线性表/线性表的实现/lc_设计链表.cpp main/数据结构教程/线性表/线性表的实现/lc_链表随机节点.cpp main/周赛359/main_01.cpp main/周赛359/main_02.cpp main/周赛359/main_03.cpp main/main_2337.cpp main/main_849.cpp main/main_1269.cpp main/main_1448.cpp main/数据结构教程/线性表/单链表及其应用/lc_移除链表元素.cpp main/数据结构教程/线性表/单链表及其应用/lc_删除链表中的节点.cpp main/数据结构教程/线性表/单链表及其应用/lc_反转链表.cpp "main/数据结构教程/线性表/单链表及其应用/lc_反转链表 II.cpp" main/数据结构教程/线性表/单链表及其应用/lc_奇偶链表.cpp main/数据结构教程/线性表/单链表及其应用/lc_分隔链表.cpp main/数据结构教程/线性表/单链表及其应用/lc_两两交换链表中的节点.cpp main/数据结构教程/线性表/单链表及其应用/lc_链表的中间结点.cpp main/数据结构教程/线性表/单链表及其应用/lc_回文链表.cpp main/数据结构教程/线性表/单链表及其应用/lc_重排链表.cpp main/数据结构教程/线性表/单链表及其应用/lc_对链表进行插入排序.cpp "main/数据结构教程/线性表/单链表及其应用/lc_ K 个一组翻转链表.cpp" "main/数据结构教程/线性表/单链表及其应用/lc_分隔链表 II.cpp" main/main_57.cpp)
